# RustWatchman

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: build_and_test.yml  ci.yml  release.yml
src/: lib.rs
src/cloudwatch/: mod.rs
src/logger/: mod.rs
