[package]
name = "rust_watchman"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
aws-config = "0.56.1"
aws-sdk-cloudwatchlogs = "0.32.0"
chrono = "0.4.31"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tokio = { version = "1.12.0", features = ["full"] }
regex = "1.9.6"

