[package]
name = "rust_watchman"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-config = "0.56"
aws-sdk-cloudwatchlogs = "0.32"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
regex = "1"

